navbar overlap bug

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 a,
 a:hover {
   color: #ced4da;
+  background-color: white;
 }
 
 .active {
